<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/search"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/navigation_toggle_search">
        </item>

        <item
            android:id="@+id/gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/navigation_toggle_gallery">
        </item>

        <item
            android:id="@+id/call"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/navigation_toggle_call">
        </item>

    </group>
    <item android:title="@string/navigation_communicate">
        <menu>
            <item
                android:id="@+id/send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/navigation_communicate_item_send">
            </item>
            <item
                android:id="@+id/share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/navigation_communicate_item_share">
            </item>
            <item
                android:id="@+id/close"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/navigation_communicate_item_close">
            </item>
        </menu>
    </item>

</menu>